fix: Routine Persistence worksgit status! (task doesnt work)